--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto desenvolvido para gerenciar perguntas anônimas de usuários direcionados ao dono da página. Projeto desenvolvido na semana NLW Rocketseat na missão discover!",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "nodemon ."
   },
   "keywords": [],
   "author": "Vinicius Queiroz",
@@ -14,6 +14,6 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.12"
   }
 }
