--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Projeto desenvolvido para gerenciar perguntas anônimas de usuários direcionados ao dono da página. Projeto desenvolvido na semana NLW Rocketseat na missão discover!",
   "main": "src/server.js",
   "scripts": {
-    "start": "nodemon ."
+    "dev": "nodemon . ",
+    "init-db": "node src/db/init.js"
   },
   "keywords": [],
   "author": "Vinicius Queiroz",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
